<resources>
    <string name="app_name">Notes</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_enter_your_account_details_here">Please enter your account details here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_account">Create account</string>
    <string name="please_create_your_account_here">Please create your account here</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset password</string>
    <string name="please_enter_your_email_here">Please enter your email here</string>
    <string name="send">SEND</string>
    <string name="editicon">editIcon</string>
    <string name="deleteicon">deleteIcon</string>
    <string name="create">CREATE</string>
    <string name="signout">signOut</string>
    <string name="no_notes">No Notes</string>
    <string name="iconback">iconBack</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
</resources>