<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/btnSaveUpNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        style="@style/Widget.Material3.Button.TextButton"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/etTextTitleNoteUpNote"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:autofillHints="text"
        android:inputType="text"
        android:background="@drawable/round_background"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/etTextContentNoteUpNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="text"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:scrollbars="vertical"
        android:background="@drawable/round_background"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="LabelFor" />
</LinearLayout>